2002-11-06  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h}: Speed up and simplify sorting by merging
	the directory/file information into the collate key (directories
	get a leading '0', files get a leading '1').  This is amazingly
	easy and not hackish in any way -- after all, this kind of pre-
	processing the strings is exactly what collate keys are for.

2002-11-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.{cc,h} (is_freeable): New method that checks
	whether it's safe to unreference the buffer.  This can be used
	to reduce the memory footprint.

	* src/filetree.{cc,h}: Unreference the text buffer whenever
	possible.  For instance, we really don't need to keep a buffer
	in memory that has match_count == 0 and wasn't modified.  Also
	fix propagation of signal_match_count_changed().

2002-11-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (select_next_file): Re-add a missing
	"return true;" that got lost in a previous change.

2002-11-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/fileio.{cc,h} (FileInfo): Split this data structure into
	DirInfo and FileInfo, with a common base class FileInfoBase.
	This should be cleaner than having data members that can be
	invalid.

	* src/filetree.{cc,h}: Use the new DirInfo and FileInfo structs.
	Propagate changes of a buffer's modified change to all parent
	nodes, and color them red too.  Fix potential race conditions
	due to reassigment of blocked connections.

2002-11-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/sharedptr.h (SharedPtr<T>::cast_static): implement
	(cast_dynamic): implement
	(cast_dynamic_throw): implement.

2002-11-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h}: New files replacing filelist.{cc,h}.  The
	files are now displayed in a directory tree which is much cooler.
	As a side effect, it's now way faster when searching thousands of
	files.

	* src/Makefile.am: s/filelist/filetree/