@@ -100,9 +100,6 @@ private:
 
   void cell_data_func(Gtk::CellRenderer* cell, const Gtk::TreeModel::iterator& iter);
 
-  static int collatekey_sort_func(const Gtk::TreeModel::iterator& lhs,
-                                  const Gtk::TreeModel::iterator& rhs);
-
   static bool select_func(const Glib::RefPtr<Gtk::TreeModel>& model, const Gtk::TreePath& path,
                           bool currently_selected);
 
